Fixed merge conflicts